Fixes resizing and responsiveness on smaller screens

--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@ a:active {
     }
 }
 
+
 /*Portfolio section*/
 
 .portfolioWrapper {
@@ -106,26 +107,27 @@ a:active {
     grid-gap: 15px;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.349);
     border: solid white 3px;
-    justify-items: start;
     grid-auto-flow: row;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows:  auto;
 }
+
 /*Individual portfolio element styling*/
+
 .website {
     display: flex;
     flex-direction: column;
-    
     border: solid white 2px;
+    min-width: 200px;
 }
 
-
 /*Screen that will show on hover*/
+
 .overlay {
     position: relative;
     width: 100%;
     border: solid white 2px;
 }
-
 
 .hoverDisplay {
     display: none;
@@ -140,6 +142,7 @@ a:active {
 }
 
 /*Adding a class that will layout the technology elements in a centered grid*/
+
 .iconCentered {
     padding: 5%;
     display: grid;
@@ -147,7 +150,9 @@ a:active {
     align-content: center;
     justify-content: center;
 }
+
 /*Styling onhover icons*/
+
 .hoverDisplay img {
     height: 50px;
     width: auto;
@@ -155,13 +160,13 @@ a:active {
 }
 
 /*Styling thumbnail image*/
+
 .portfolioThumbnail {
     display: block;
     width: 100%;
     height: auto;
     z-index: 2;
 }
-
 
 /*Formatting description*/
 
